--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -189,7 +189,6 @@
   "新型コロナ受診相談窓口": "Novel Coronavirus Hotline",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "* Until further notice, due to prevention of hospital infection, examinations covered by insurance is only avairable at medical institutions such as an outpatient for returnees and contactees.",
   "新型コロナ受診相談窓口（日本語のみ）": "Novel Coronavirus Hotline (Support in Japanese only)",
-  "帰国者・接触者 電話相談センター": "Telephone consultation center for returnees and those in close contact with them",
   "24時間対応": "Open all day",
   "平日（日中）": "Weekdays (daytime)",
   "各保健所の電話番号は福祉保健局HPへ": "Find the phone number of your public health center on the Bureau of Social Welfare and Public Health website",
@@ -322,31 +321,32 @@
   "facebookで{title}のグラフをシェア": "Share the graph of {title} with Facebook",
   "日付": "Date",
   "不明": "unknown",
-  "hamamatsu": {
-    "詳細を見る（浜松市福祉保健局）": "詳細を見る（浜松市福祉保健局）",
-    "各保健所の電話番号について": "各保健所の電話番号等については「新型コロナウイルス感染症にかかる相談窓口について」（浜松市福祉保健局）をご確認ください。",
-    "平日・土日祝": "平日・土日祝",
-    "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。",
-    "「新型コロナウイルス感染症にかかる相談窓口について」": "「新型コロナウイルス感染症にかかる相談窓口について」（浜松市福祉保健局）",
-    "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、浜松市が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、浜松市が開設したものです。",
-    "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
-    "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
-    "浜松市オープンデータカタログサイト": "浜松市オープンデータカタログサイト",
-    "浜松市生活文化局広報広聴部広報課": "浜松市生活文化局広報広聴部広報課",
-    "浜松市": "浜松市",
-    "浜松市新型コロナウイルス感染症対策本部報": "浜松市新型コロナウイルス感染症対策本部報",
-    "浜松市主催等 中止又は延期するイベント等": "浜松市主催等 中止又は延期するイベント等",
-    "浜松市公式ホームページ": "浜松市公式ホームページ",
-    "浜松市健康安全研究センター等": "浜松市健康安全研究センター等",
-    "市内の最新感染動向": "市内の最新感染動向",
-    "市内発生（※1）": "市内発生（※1）",
-    "市内": "市内",
-    "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。": "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。",
-    "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。": "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。",
-    "（注）市内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載": "（注）市内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載",
-    "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
-    "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
-    "市内発生": "市内発生",
-    "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター"
-  }
+  "浜松市": "浜松市",
+  "詳細を見る（浜松市福祉保健局）": "詳細を見る（浜松市福祉保健局）",
+  "平日・土日祝": "Weekdays, weekends, and holidays",
+  "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "Please visit our \"About correspondence about novel coronavirus infectious disease in Hamamatsu city\" page before calling to consider the necessary responses.",
+  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、浜松市が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、浜松市が開設したものです。",
+  "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
+  "浜松市オープンデータカタログサイト": "浜松市オープンデータカタログサイト",
+  "浜松市生活文化局広報広聴部広報課": "浜松市生活文化局広報広聴部広報課",
+  "浜松市新型コロナウイルス感染症対策本部報": "浜松市新型コロナウイルス感染症対策本部報",
+  "浜松市主催等 中止又は延期するイベント等": "浜松市主催等 中止又は延期するイベント等",
+  "浜松市新型コロナウイルス感染症対策本部会議": "Hamamatsu city novel coronavirus infectious disease task force meeting (in Japanese)",
+  "浜松市公式ホームページ": "Hamamatsu Municipal Homepage (in Japanese)",
+  "民間支援情報ナビ For 静岡県版": "Private Sector Support Information Navigator For Shizuoka Prefecture (in Japanese)",    
+  "浜松市健康安全研究センター等": "浜松市健康安全研究センター等",
+  "市内の最新感染動向": "Latest updates on COVID-19 in Hamamatsu",
+  "市内発生（※1）": "市内発生（※1）",
+  "市内": "市内",
+  "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。": "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。",
+  "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。": "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。",
+  "（注）市内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載": "（注）市内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載",
+  "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
+  "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
+  "市内発生": "市内発生",
+  "帰国者・接触者 電話相談センター": "Returnee and Contact Consultation Center",
+  "新型コロナウイルス感染症に関する相談件数": "Number of calls to the Consultation Center",
+  "浜松市 中区": "Naka-ku",
+  "浜松市 浜北区": "Hamakita-ku"
 }
