sync locales of ja, en, and po

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -321,7 +321,7 @@
   "facebookで{title}のグラフをシェア": "Share the graph of {title} with Facebook",
   "日付": "Date",
   "不明": "unknown",
-  "浜松市": "浜松市",
+  "浜松市": "Hamamatsu City",
   "詳細を見る（浜松市福祉保健局）": "詳細を見る（浜松市福祉保健局）",
   "平日・土日祝": "Weekdays, weekends, and holidays",
   "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "Please visit our \"About correspondence about novel coronavirus infectious disease in Hamamatsu city\" page before calling to consider the necessary responses.",
