--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -332,9 +332,9 @@
   "浜松市生活文化局広報広聴部広報課": "浜松市生活文化局広報広聴部広報課",
   "浜松市新型コロナウイルス感染症対策本部報": "浜松市新型コロナウイルス感染症対策本部報",
   "浜松市主催等 中止又は延期するイベント等": "浜松市主催等 中止又は延期するイベント等",
-  "浜松市新型コロナウイルス感染症対策本部会議": "Hamamatsu city novel coronavirus infectious disease task force meeting (in Japanese)",
+  "浜松市新型コロナウイルス感染症対策本部会議": "浜松市新型コロナウイルス感染症対策本部会議",
   "浜松市公式ホームページ": "浜松市公式ホームページ",
-  "民間支援情報ナビ For 静岡県版": "Private Sector Support Information Navigator For Shizuoka Prefecture (in Japanese)",    
+  "民間支援情報ナビ For 静岡県版": "民間支援情報ナビ For 静岡県版",    
   "浜松市健康安全研究センター等": "浜松市健康安全研究センター等",
   "市内の最新感染動向": "市内の最新感染動向",
   "市内発生（※1）": "市内発生（※1）",
@@ -347,6 +347,6 @@
   "市内発生": "市内発生",
   "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター",
   "新型コロナウイルス感染症に関する相談件数": "新型コロナウイルス感染症に関する相談件数",
-  "浜松市 中区": "Naka-ku",
-  "浜松市 浜北区": "Hamakita-ku"
+  "浜松市 中区": "中区",
+  "浜松市 浜北区": "浜北区"
 }
