--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -260,7 +260,7 @@
   "※最新の情報はWebページをご覧ください": "※最新の情報はWebページをご覧ください",
   "〇": "〇",
   "ogp": {
-    "og:image": "https://dev-stopcovid19-hamamatsu.netlify.com/hamamatsu/ogp.png"
+    "og:image": "https://stopcovid19.code4hamamatsu.org/hamamatsu/ogp.png"
   },
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/jp/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=ja",
