refs #160 translate to easy Japanese

--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -186,10 +186,9 @@
   "都内医療機関及び保健所等へのマスクの配布について": "東京（とうきょう）の 病院（びょういん）や 保健所（ほけんじょ） など へ マスクを おくりました",
   "新型コロナウイルス感染症にかかる相談窓口について": "あたらしいコロナウイルスの 病気（びょうき）について 相談（そうだん）したい とき",
   "{advisory}による相談結果": "{advisory}による 相談（そうだん）結果（けっか）",
-  "新型コロナ受診相談窓口": "新（あたら）しい コロナ受診相談窓口（じゅしんそうだんまどぐち）",
+  "新型コロナ受診相談窓口": "新（あたら）しい コロナウイルスについて相談（そうだん）するところ",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※ 保険適用（ほけんてきよう）となる検査（けんさ）は、しばらくの間（あいだ）、病院（びょういん）の中（なか）で コロナウイルスが 拡（ひろ）がらないようにするため、「帰国者（きこくしゃ）・接触者（せっしょくしゃ）外来（がいらい）」など の特別（とくべつ）な 医療機関（いりょうきかん）で します",
   "新型コロナ受診相談窓口（日本語のみ）": "新（あたら）しい コロナ受診相談窓口（じゅしん そうだんまどぐち）（※ 受診相談窓口：病院（びょういん）で 見（み）てもらうか について 相談（そうだん）するところ",
-  "帰国者・接触者 電話相談センター": "帰国者・接触者電話相談センター",
   "24時間対応": "いつでも 相談（そうだん）することが できます",
   "平日（日中）": "月曜日（げつようび）から金曜日（きんようび）\nあさ9時（じ）から ごご5時（じ）まで",
   "各保健所の電話番号は福祉保健局HPへ": "保健所（ほけんじょ）の でんわばんごうは、福祉保健局（ふくししょけんきょく）の ウェブサイト を みてください",
@@ -321,5 +320,33 @@
   "Twitterで{title}のグラフをシェア": "{title} の グラフ を、Twitter に 投稿（とうこう）する",
   "facebookで{title}のグラフをシェア": "{title} の グラフ を、facebook に 投稿（とうこう）する",
   "日付": "日付（ひづけ）",
-  "不明": "はっきりとは分（わ）からないもの"
+  "不明": "はっきりとは分（わ）からないもの",
+  "浜松市": "はままつし",
+  "詳細を見る（浜松市福祉保健局）": "もっと知（し）りたいとき　浜松市福祉保健局（はままつし ふくしほけんきょく）",
+  "平日・土日祝": "毎日（まいにち）",
+  "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "お電話（でんわ）の前に「あたらしい コロナウイルス について」のページを読んでください。",
+  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、浜松市が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、浜松市が開設したものです。",
+  "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
+  "浜松市オープンデータカタログサイト": "浜松市（はままつし）オープンデータカタログサイト",
+  "浜松市生活文化局広報広聴部広報課": "浜松市（はままつし）生活文化局広報広聴部広報課",
+  "浜松市新型コロナウイルス感染症対策本部報": "浜松市（はままつし）新型コロナウイルス感染症対策本部報",
+  "浜松市主催等 中止又は延期するイベント等": "浜松市（はままつし）主催等 中止又は延期するイベント等",
+  "浜松市新型コロナウイルス感染症対策本部会議": "あたらしいコロナウイルスの 病気（ びょうき） に ならないために、 どうすればいいか を 考（ かんが） える 会議（ かいぎ）について",
+  "浜松市公式ホームページ": "浜松市（はままつし）のホームページ",
+  "民間支援情報ナビ For 静岡県版": "静岡県（しずおかけん）の 支援（しえん）情報（じょうほう）",
+  "浜松市健康安全研究センター等": "浜松市健康安全研究センター等",
+  "市内の最新感染動向": "浜松市（はままつし）での コロナウイルスの あたらしい じょうほう",
+  "市内発生（※1）": "浜松市（はままつし）で発生（※1）",
+  "市内": "浜松市（はままつし）のなか",
+  "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。": "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。",
+  "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。": "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。",
+  "（注）市内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載": "（注）市内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載",
+  "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
+  "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
+  "市内発生": "浜松市（はままつし）で発生",
+  "帰国者・接触者 電話相談センター": "電話（でんわ）相談（そうだん）センター",
+  "新型コロナウイルス感染症に関する相談件数": "相談（そうだん）の数",
+  "浜松市 中区": "中区（なか く）",
+  "浜松市 浜北区": "浜北区（はまきた く）"
 }
