menu items in Portuguese

--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -343,9 +343,9 @@
   "浜松市企画調整部広聴広報課": "Prefeitura de Hamamatsu - Departamento de Coordenação e Planejamento - Divisão de Opiniões e Relações Públicas ",
   "浜松市新型コロナウイルス感染症対策本部報": "Sede de medidas de prevenção da epidemia do Novo Coronavírus",
   "浜松市主催等 中止又は延期するイベント等": "Cancelamento e prorrogação de eventos, etc. patrocinados pela prefeitura de Hamamatsu",
-  "浜松市新型コロナウイルス感染症対策本部会議": "Hamamatsu city novel coronavirus infectious disease task force meeting (in Japanese)",
+  "浜松市新型コロナウイルス感染症対策本部会議": "Reunião da Nova Sede de Controle de Infecção por Coronavírus da Cidade de Hamamatsu (em japonês)",
   "浜松市公式ホームページ": "Homepage da prefeitura de Hamamatsu",
-  "民間支援情報ナビ For 静岡県版": "Private Sector Support Information Navigator For Shizuoka Prefecture (in Japanese)",    
+  "民間支援情報ナビ For 静岡県版": "Navegador de Informações de Apoio ao Setor Privado para a Província de Shizuoka (em japonês)",    
   "浜松市健康安全研究センター等": "Centro de pesquisa em saúde e segurança de Hamamatsu entre outros",
   "市内の最新感染動向": "Tendência de infecção no município",
   "市内発生（※1）": "Incidência no município（※1）",
