ひまわりへの電話相談を削除

--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -205,7 +205,7 @@
   "24時間対応": "Atendimento 24 horas",
   "平日（夜間）": "Dias úteis (noite)",
   "午後5時から翌朝午前9時": "das 17h às 9h da manhã",
-  "ひまわり": "Para suporte em português, ligue para o Tokyo Health Care Information Center (Himawari) 03-5285-8181(Horário: 9:00 a.m. a 20:00 p.m. inclui fins de semana e feriados).",
+  "ひまわり": " ",
   "土日祝 終日": " sábado, domingo, feriado, sem folga ",
   "専門的な助言が必要な場合": "Caso necessite de orientação do profissional",
   "入院となります": "Internação hospitalar",
