fix two sentences and asterisks

--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -15,9 +15,9 @@
   "都営地下鉄の利用者数の推移": "Estimated number of Toei subway passengers",
   "都庁来庁者数の推移": "Number of visitors to the Tokyo Metropolitan Government buildings",
   "都内発生（※1）": "Founds in Tokyo (*1)",
-  "※1: 疑い例・接触者調査": "※1:Casos suspeitos・averiguação de suspeitos ", 
-  "その他（※2）": "Diversos（※2）",
-  "※2: チャーター便・クルーズ船": "※2: Avião fretado・Navio cruzeiro",
+  "※1: 疑い例・接触者調査": "*1:Casos suspeitos・averiguação de suspeitos ", 
+  "その他（※2）": "Diversos（*2）",
+  "※2: チャーター便・クルーズ船": "*2: Avião fretado・Navio cruzeiro",
   "{date}の累計": "Total{date} ",
   "期間: {duration}": "Período: {duration}",
   "{duration}の利用者数との相対値: {percentage}":"Valor relativo de usuários/{duration}:{percentage}",
@@ -54,7 +54,7 @@
   "10歳未満": "10 anos incompletos",
   "男性": "Masculino",
   "女性": "Feminino",
-  "退院※": "Alta hospitalar※",
+  "退院※": "Alta hospitalar *",
   "臨時休校中の新型コロナウイルス感染症対応についてのお願い": "Solicitação sobre as medidas de prevenção da epidemia do Novo Coronavírus, durante o recesso escolar ",
   "感染予防・健康管理":"Prevenção contra infecção・cuidados com a saúde",
   "不特定多数の人の集まる場所等への外出を避け、基本的に自宅で過ごしてください。": "Procurar ficar em casa, evitando circulação desnecessária, aglomeração, etc.",
@@ -156,7 +156,7 @@
   "退院": "Alta",
   "日別": "Por dia",
   "累計": "Total",
-  "※退院には、死亡退院を含む": "※ Alta refere-se à alta hospitalar, incluindo alta por óbito.",
+  "※退院には、死亡退院を含む": "* Alta refere-se à alta hospitalar, incluindo alta por óbito.",
   "{date} 更新": " Atualizado em {date} ",
   "オープンデータを入手": "Dados abertos",
   "埋め込み用コード": " Embed Code",
@@ -197,9 +197,9 @@
   "都の備蓄マスク20万枚を都内全区市町村へ提供": " Tokyo Metropolitan Government provides the stockpile of masks for all the wards: and the municipalities in Tokyo (in Japanese)",
   "都内医療機関及び保健所等へのマスクの配布について": "Regarding the distribution of masks to medical institutions: public health centers: etc.: in Tokyo",
   "新型コロナウイルス感染症にかかる相談窓口について": "Balcão de informação sobre o Novo Coronavírus",
-  "{advisory}による相談結果": "Following consultation through the {advisory}",
+  "{advisory}による相談結果": "Resultados da consulta por {advisory}",
   "新型コロナ受診相談窓口": "Balcão de atendimento para casos suspeitos do Novo Coronavírus",
-  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※Para prevenção de infecção hospitalar, os testes cobertos pelo seguro de saúde serão realizados em instituição médica, no “ambulatório para pessoas repatriadas ou com suspeita de contaminação“",
+  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "* Para prevenção de infecção hospitalar, os testes cobertos pelo seguro de saúde serão realizados em instituição médica, no “ambulatório para pessoas repatriadas ou com suspeita de contaminação“",
   "新型コロナ受診相談窓口（日本語のみ）": "Balcão de atendimento para casos suspeitos do Novo Coronavírus",
   "浜松市帰国者・接触者 電話相談センター": "Centro de consulta para pessoas repatriadas ou com suspeita de contaminação de Hamamatsu”",
   "24時間対応": "Atendimento 24 horas",
@@ -306,7 +306,7 @@
   "都営交通に関すること": "Toei Transportation",
   "交通局": "Bureau of Transportation",
   "（都営交通お客様センター）": "(Toei Transportation Customer Center)",
-  "検査実施人数": "Number of people tested",
+  "検査実施人数": "Pessoas submetidas a teste",
   "（注）医療機関が保険適用で行った検査は含まれていない": "(Note) Excluding the examinations covered by insurance conducted at medical institutions.",
   "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "(Note) Excluding the returnees on charter flights or the cruise ship passengers",
   "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "(Note) The number is published as preliminary figures and may be revised as confirmed data at a later date ",
@@ -348,7 +348,7 @@
   "民間支援情報ナビ For 静岡県版": "Navegador de Informações de Apoio ao Setor Privado para a Província de Shizuoka (em japonês)",    
   "浜松市健康安全研究センター等": "Centro de pesquisa em saúde e segurança de Hamamatsu entre outros",
   "市内の最新感染動向": "Tendência de infecção no município",
-  "市内発生（※1）": "Incidência no município（※1）",
+  "市内発生（※1）": "Incidência no município（*1）",
   "市内": "no município",
   "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。": "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。",
   "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。": "市内中堅・中小企業に対し、テレワークの導入に必要な機器やソフトウェア等の経費を助成します（限度額250万円、助成率10/10）。ぜひご活用ください。",
