最新の情報はWebページを 翻訳

--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -267,7 +267,7 @@
   "新型コロナ受診相談窓口へ": "Balcão de atendimento para casos suspeitos de Novo Coronavírus",
   "別タブで開く": "Abrir em outra janela",
   "2次元コード": "Código 2 D",
-  "※最新の情報はWebページをご覧ください": "* Please check the latest information from the web site.",
+  "※最新の情報はWebページをご覧ください": "* Por favor, visite nossa página web para obter as informações mais recentes.",
   "〇": "✔",
   "ogp": {
     "og:image": "https://stopcovid19.code4hamamatsu.org/hamamatsu/ogp.png"
