--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -14,6 +14,7 @@
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口相談件数",
   "都営地下鉄の利用者数の推移": "都営地下鉄の利用者数の推移",
   "都庁来庁者数の推移": "都庁来庁者数の推移",
+  "テーブルを表示": "テーブルを表示",
   "都内発生（※1）": "都内発生（※1）",
   "※1: 疑い例・接触者調査": "※1: 疑い例・接触者調査",
   "その他（※2）": "その他（※2）",
@@ -147,6 +148,7 @@
   "※退院には、死亡退院を含む": "※退院には、死亡退院を含む",
   "{date} 更新": "{date} 更新",
   "オープンデータを入手": "オープンデータを入手",
+  "情報をシェアする": "情報をシェアする",
   "埋め込み用コード": "埋め込み用コード",
   "埋め込み用コードをコピーしました": "埋め込み用コードをコピーしました",
   "{range}の利用者数*の平均値を基準としたときの相対値": "{range}の利用者数*の平均値を基準としたときの相対値",
@@ -321,6 +323,7 @@
   "facebookで{title}のグラフをシェア": "facebookで{title}のグラフをシェア",
   "日付": "日付",
   "不明": "不明",
+  "{title}のグラフ": "{title}のグラフ",
   "浜松市": "浜松市",
   "詳細を見る（浜松市福祉保健局）": "詳細を見る（浜松市福祉保健局）",
   "平日・土日祝": "平日・土日祝",
@@ -348,5 +351,7 @@
   "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター",
   "新型コロナウイルス感染症に関する相談件数": "新型コロナウイルス感染症に関する相談件数",
   "浜松市 中区": "中区",
-  "浜松市 浜北区": "浜北区"
+  "浜松市 浜北区": "浜北区",
+  "※退院は、保健所から報告があり、確認ができているものを反映": "※退院は、保健所から報告があり、確認ができているものを反映",
+  "※死亡退院を含む": "※死亡退院を含む"
 }
