#413-フローのワーディング変更

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -189,7 +189,7 @@
   "新型コロナウイルス感染症にかかる相談窓口について": "Consultation desks for COVID-19 ",
   "{advisory}による相談結果": "Following consultation through the {advisory}",
   "新型コロナ受診相談窓口": "Novel Coronavirus Hotline",
-  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "* Until further notice, due to prevention of hospital infection, examinations covered by insurance is only avairable at medical institutions such as an outpatient for returnees and contactees.",
+  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "",
   "新型コロナ受診相談窓口（日本語のみ）": "Novel Coronavirus Hotline (Support in Japanese only)",
   "24時間対応": "Open all day",
   "平日（日中）": "Weekdays (daytime)",
@@ -198,7 +198,7 @@
   "午後5時から翌朝午前9時": "5:00 pm - 9:00 am ",
   "ひまわり": "For support in English, Chinese, Korean, Spanish and Thai, please call the Tokyo Health Care Information Center (Himawari) 03-5285-8181(Hours: 9:00 a.m. to 8:00 p.m. includes weekends and holidays.)",
   "土日祝 終日": "Sat., Sun., public holidays (all day)",
-  "専門的な助言が必要な場合": "If you need expert advice",
+  "専門的な助言が必要な場合": "",
   "入院となります": " Need to be hospitalized",
   "感染症指定医療機関等": " designated medical institutions for specified infectious diseases and equivalent institutions",
   "一般の方": "General population",
@@ -253,6 +253,7 @@
   "微熱": "Slight fever",
   "軽い咳": "Slight cough",
   "感染の不安": "Fear infection ",
+  "感染の予防": "Prevention infection",
   "新型コロナコールセンター": "Tokyo Novel Coronavirus Call Center (Support in English, Chinese, Korean and Japanese)",
   "午前9時から午後9時（土日祝含む）": " 9:00 am - 9:00 pm (including weekends and holidays)",
   "新型コロナ受診相談窓口へ": " Go COVID-19 advisory",
@@ -348,7 +349,7 @@
   "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
   "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
   "市内発生": "市内発生",
-  "帰国者・接触者 電話相談センター": "Returnee and Contact Consultation Center",
+  "帰国者・接触者 電話相談センター": "",
   "新型コロナウイルス感染症に関する相談件数": "Number of calls to the Consultation Center",
   "浜松市 中区": "Naka-ku",
   "浜松市 浜北区": "Hamakita-ku",
