--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -189,7 +189,7 @@
   "新型コロナウイルス感染症にかかる相談窓口について": "あたらしいコロナウイルスの 病気（びょうき）について 相談（そうだん）したい とき",
   "{advisory}による相談結果": "{advisory}による 相談（そうだん）結果（けっか）",
   "新型コロナ受診相談窓口": "新（あたら）しい コロナウイルスについて相談（そうだん）するところ",
-  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※ 保険適用（ほけんてきよう）となる検査（けんさ）は、しばらくの間（あいだ）、病院（びょういん）の中（なか）で コロナウイルスが 拡（ひろ）がらないようにするため、「帰国者（きこくしゃ）・接触者（せっしょくしゃ）外来（がいらい）」など の特別（とくべつ）な 医療機関（いりょうきかん）で します",
+  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "",
   "新型コロナ受診相談窓口（日本語のみ）": "新（あたら）しい コロナ受診相談窓口（じゅしん そうだんまどぐち）（※ 受診相談窓口：病院（びょういん）で 見（み）てもらうか について 相談（そうだん）するところ",
   "24時間対応": "いつでも 相談（そうだん）することが できます",
   "平日（日中）": "月曜日（げつようび）から金曜日（きんようび）\nあさ9時（じ）から ごご5時（じ）まで",
@@ -198,7 +198,7 @@
   "午後5時から翌朝午前9時": "ごご5時（じ）から ごぜん9時（じ）まで",
   "ひまわり": "ひまわり",
   "土日祝 終日": "土曜日（どようび）、日曜日（にちようび）、休（やす）みの日（ひ）の 1日中（いちにちじゅう）",
-  "専門的な助言が必要な場合": "コロナウイルスの 病気（びょうき）に 詳（くわ）しい人（ひと）から 話（はなし）を 聞（き）くことが 必要（ひつよう）な とき",
+  "専門的な助言が必要な場合": "",
   "入院となります": "入院（にゅういん）と なります",
   "感染症指定医療機関等": "感染症指定医療機関（かんせんしょう していいりょうきかん）など",
   "一般の方": "一般（いっぱん）の人（ひと）",
@@ -253,6 +253,7 @@
   "微熱": "いつもより ねつが 高（たか）い",
   "軽い咳": "せきが でる",
   "感染の不安": "コロナウイルスに かかる 不安（ふあん）、心配（しんぱい）",
+  "感染の予防": "感染(かんせん)の予防(よぼう)",
   "新型コロナコールセンター": "新（あたら）しい コロナコールセンター（コロナウイルスの 病気（びょうき）について 電話（でんわ）相談（そうだん）できるところ）",
   "午前9時から午後9時（土日祝含む）": "午前（ごぜん）9時（じ）から 夜（よる）の 午後（ごご）9時（じ）まで （土曜日（どようび）、日曜日（にちようび）、休（やす）み の 日（ひ）も やっています）",
   "新型コロナ受診相談窓口へ": "新（あたら）しい コロナ受診相談窓口（じゅしんそうだんまどぐち）へ（※ 受診相談窓口：病院（びょういん）で 見（み）てもらうか について 相談（そうだん） するところ）",
@@ -348,7 +349,7 @@
   "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
   "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
   "市内発生": "浜松市（はままつし）で発生",
-  "帰国者・接触者 電話相談センター": "電話（でんわ）相談（そうだん）センター",
+  "帰国者・接触者 電話相談センター": "",
   "新型コロナウイルス感染症に関する相談件数": "相談（そうだん）の数",
   "浜松市 中区": "中区（なか く）",
   "浜松市 浜北区": "浜北区（はまきた く）",
