--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -189,7 +189,7 @@
   "新型コロナウイルス感染症にかかる相談窓口について": "新型コロナウイルス感染症にかかる相談窓口について",
   "{advisory}による相談結果": "{advisory}による相談結果",
   "新型コロナ受診相談窓口": "新型コロナ受診相談窓口",
-  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施",
+  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "",
   "新型コロナ受診相談窓口（日本語のみ）": "新型コロナ受診相談窓口",
   "24時間対応": "24時間対応",
   "平日（日中）": "平日（日中）",
@@ -198,7 +198,7 @@
   "午後5時から翌朝午前9時": "午後5時から翌朝午前9時",
   "ひまわり": "ひまわり",
   "土日祝 終日": "土日祝 終日",
-  "専門的な助言が必要な場合": "専門的な助言が必要な場合",
+  "専門的な助言が必要な場合": "",
   "入院となります": "入院となります",
   "感染症指定医療機関等": "感染症指定医療機関等",
   "一般の方": "一般の方",
@@ -253,6 +253,7 @@
   "微熱": "微熱",
   "軽い咳": "軽い咳",
   "感染の不安": "感染の不安",
+  "感染の予防": "感染の予防",
   "新型コロナコールセンター": "新型コロナコールセンター",
   "午前9時から午後9時（土日祝含む）": "午前9時から午後9時（土日祝含む）",
   "新型コロナ受診相談窓口へ": "新型コロナ受診相談窓口へ",
@@ -348,7 +349,7 @@
   "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
   "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
   "市内発生": "市内発生",
-  "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター",
+  "帰国者・接触者 電話相談センター": "",
   "新型コロナウイルス感染症に関する相談件数": "新型コロナウイルス感染症に関する相談件数",
   "浜松市 中区": "中区",
   "浜松市 浜北区": "浜北区",
