--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -201,7 +201,7 @@
   "新型コロナウイルス感染症にかかる相談窓口について": "Balcão de informação sobre o Novo Coronavírus",
   "{advisory}による相談結果": "Resultados da consulta por {advisory}",
   "新型コロナ受診相談窓口": "Balcão de atendimento para casos suspeitos do Novo Coronavírus",
-  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "* Para prevenção de infecção hospitalar, os testes cobertos pelo seguro de saúde serão realizados em instituição médica, no “ambulatório para pessoas repatriadas ou com suspeita de contaminação“",
+  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "",
   "新型コロナ受診相談窓口（日本語のみ）": "Balcão de atendimento para casos suspeitos do Novo Coronavírus",
   "浜松市帰国者・接触者 電話相談センター": "Centro de consulta para pessoas repatriadas ou com suspeita de contaminação de Hamamatsu”",
   "24時間対応": "Atendimento 24 horas",
@@ -209,7 +209,7 @@
   "午後5時から翌朝午前9時": "das 17h às 9h da manhã",
   "ひまわり": " ",
   "土日祝 終日": " sábado, domingo, feriado, sem folga ",
-  "専門的な助言が必要な場合": "Caso necessite de orientação do profissional",
+  "専門的な助言が必要な場合": "",
   "入院となります": "Internação hospitalar",
   "感染症指定医療機関等": "Instituição médica, etc. credenciada para doença contagiosa ",
   "一般の方": "Público em geral",
@@ -264,6 +264,7 @@
   "微熱": "Febril",
   "軽い咳": "Tosse leve",
   "感染の不安": "Insegurança devido o contágio",
+  "感染の予防": "Prevention infection",
   "新型コロナコールセンター": "Tokyo Novel Coronavirus Call Center (Support in English, Chinese, Korean and Japanese)",
   "午前9時から午後9時（土日祝含む）": "das 9h às 21h (inclui final de semana e feriado)",
   "新型コロナ受診相談窓口へ": "Balcão de atendimento para casos suspeitos de Novo Coronavírus",
@@ -359,7 +360,7 @@
   "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
   "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
   "市内発生": "市内発生",
-  "帰国者・接触者 電話相談センター": " Centro de consulta para pessoas repatriadas ou com suspeita de contaminação de Hamamatsu",  
+  "帰国者・接触者 電話相談センター": "",  
   "新型コロナウイルス感染症に関する相談件数": "Nº de consultas referente a infecção pelo Novo Coronavírus",
   "浜松市 中区": "Naka-ku",
   "浜松市 浜北区": "Hamakita-ku",
