fix format for zh-CN.json

--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -354,5 +354,5 @@
   "浜松市 中区": "中区",
   "浜松市 浜北区": "浜北区",
   "※退院は、保健所から報告があり、確認ができているものを反映": "※退院は、保健所から報告があり、確認ができているものを反映",
-  "※死亡退院を含む": "※死含死亡者出院
+  "※死亡退院を含む": "※死含死亡者出院"
 }
