--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -196,7 +196,7 @@
   "各保健所の電話番号は福祉保健局HPへ": "各保健所の電話番号は福祉保健局HPへ",
   "平日（夜間）": "平日（夜间）",
   "午後5時から翌朝午前9時": "午后5时至次日午前9时",
-  "ひまわり": "ひまわり",
+  "ひまわり": "",
   "土日祝 終日": "周六 周日 节假日全天",
   "専門的な助言が必要な場合": "需要专业性咨询时",
   "入院となります": "需要住院",
@@ -298,10 +298,10 @@
   "都営交通に関すること": "都営交通に関すること",
   "交通局": "交通局",
   "（都営交通お客様センター）": "（都営交通お客様センター）",
-  "検査実施人数": "検査実施人数",
+  "検査実施人数": "检查实施人数",
   "（注）医療機関が保険適用で行った検査は含まれていない": "（注）医療機関が保険適用で行った検査は含まれていない",
-  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない",
-  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "（注）速報値として公開するものであり、後日確定データとして修正される場合あり",
+  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "（注）不含包机归国者、游轮乗客等",
+  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "（注）公布数据为速报值或日后数据确定后的订正值",
   "都外": "都外",
   "新宿区エリアの来訪者推移（参考値）": "新宿区エリアの来訪者推移（参考値）",
   "千代田区エリアの来訪者推移（参考値）": "千代田区エリアの来訪者推移（参考値）",
@@ -353,6 +353,6 @@
   "新型コロナウイルス感染症に関する相談件数": "关于新冠肺炎感染症的咨询件数",
   "浜松市 中区": "中区",
   "浜松市 浜北区": "浜北区",
-  "※退院は、保健所から報告があり、確認ができているものを反映": "※退院は、保健所から報告があり、確認ができているものを反映",
+  "※退院は、保健所から報告があり、確認ができているものを反映": "※从保健所得到出院的报告，确认后予以公示",
   "※死亡退院を含む": "※死含死亡者出院"
 }
