--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -190,7 +190,7 @@
   "{advisory}による相談結果": "{advisory}による相談結果",
   "新型コロナ受診相談窓口": "新冠肺炎感染就诊咨询窗口",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "适用保险的检查  目前，基于防止院内感染，只在「归国者・接触者门诊」等的医疗机关实施",
-  "新型コロナ受診相談窓口（日本語のみ）": "新型コロナ受診相談窓口",
+  "新型コロナ受診相談窓口（日本語のみ）": "新冠肺炎感染就诊咨询窗口",
   "24時間対応": "24小时对应",
   "平日（日中）": "平日（日中）",
   "各保健所の電話番号は福祉保健局HPへ": "各保健所の電話番号は福祉保健局HPへ",
