--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -267,8 +267,8 @@
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/jp/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=ja",
   "https://support.google.com/analytics/answer/6004245?hl=ja": "https://support.google.com/analytics/answer/6004245?hl=ja",
-  "お問い合わせ先一覧": "お問い合わせ先一覧",
-  "お問い合わせ内容": "お問い合わせ内容",
+  "お問い合わせ先一覧": "联系方式一览",
+  "お問い合わせ内容": "联系信息",
   "局名": "局名",
   "電話番号": "電話番号",
   "サイト全般に関すること": "サイト全般に関すること",
