#466-Vietnam語表記設定でのプルリク先間違い再投稿

--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -1,54 +1,76 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "Trong trường hợp nghi nhiễm COVID-19",
+  "新型コロナウイルス感染症が心配なときに": "Khi lo lắng về bệnh lây nhiễm COVID-19",
+  "かかりつけ医に相談することもできます。": "Bạn có thể nói chuyện với cơ sở y tế bạn vẫn thường đi khám.",
+  "詳しくはこちらをご参照ください。": "Vui lòng tham khảo tại đây để biết chi tiết.",
   "詳細を見る（東京都福祉保健局）": "Xem chi tiết (Cục phúc lợi xã hội và y tế công cộng)",
   "都内の最新感染動向": "Cập nhật mới nhất về tình hình dịch COVID-19 ở Tokyo",
-  "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Liên hệ ngay nếu bạn lo lắng về các triệu chứng của bản thân và gia đình",
-  "相談の手順を見る": "Xem chi tiết",
-  "検査陽性者の状況": "Thông tin chi tiết về các ca nhiễm",
+  "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Nếu bản thân bạn hoặc gia đình có lo lắng, bất an về các triệu chứng bệnh, trước tiên vui lòng hãy gọi cho chúng tôi",
+  "相談の手順を見る": "Xem trình tự tư vấn",
+  "検査陽性者の状況": "Tình trạng của người dương tính sau khi xét nghiệm",
   "陽性患者数": "Số bệnh nhân dương tính",
-  "陽性患者の属性": "Đặc điểm các ca dương tính",
-  "検査実施数": "Số người xét nghiệm",
+  "陽性患者の属性": "Thuộc tính của bệnh nhân dương tính",
+  "検査実施件数": "Số vụ tiến hành xét nghiệm",
   "新型コロナコールセンター相談件数": "Số cuộc gọi vào Trung tâm tư vấn về COVID-19 ",
   "新型コロナ受診相談窓口相談件数": "Số lượng báo cáo cho Trung tâm tư vấn điện thoại kết hợp",
   "都営地下鉄の利用者数の推移": "Dự đoán số lượng hành khách đi bằng tàu điện Toei",
   "都庁来庁者数の推移": "Thay đổi về số lượng khách đến thăm Chính quyền thành phố Tokyo",
   "都内発生（疑い例・接触者調査）": "Mới phát sinh tại Tokyo (Người nghi nhiễm hoặc người có tiếp xúc)",
-  "その他（チャーター便・クルーズ船）": "Khác (người mới trở về từ Vũ Hán bằng chuyên cơ hay hành khách trên du thuyền)",
-  "{date}の累計": "Tổng số tính đến {date}",
-  "期間: {duration}": "Giai đoạn: {duration}",
-  "{duration}の利用者数との相対値: {percentage}": "Dựa trên số người dùng trong giai đoạn {duration}, giá trị tương đối là: {percentage}",
+  "浜松市帰国者・接触者 電話相談センター": "Trung tâm tư vấn điện thoại dành cho người về nước/người tiếp xúc Thành phố Hamamatsu ",
+  "来庁者数の推移": "Biến động về số lượng người đến trụ sở hành chính",
+  "市内発生（※1）": "Phát sinh trong thành phố (※1)",
+  "※1: 疑い例・接触者調査": "※1: ví dụ nghi vấn/ điều tra người tiếp xúc",
+  "その他（※2） ": "Ngoài ra (※2): ",
+  "※2チャーター便・クルーズ船": "Chuyến bay trọn gói/ Tàu du lịch",
+  "{date}の累計": "{date}tích lũy",
+  "期間: {duration} ": "Thời hạn: {duration}",
+  "{duration}の利用者数との相対値: {percentage}": "Giá trị tương đối của số lượng người sử dụng trong {duration}:{percentage}",
   "1月20日~1月24日": "từ ngày 20 đến 24/01",
   "2月10日~14日": "Từ ngày 10 đến ngày 14 tháng 2",
   "2月17日~21日": "Từ ngày 17 đến ngày 21 tháng 2",
   "2月25日~28日": "Từ ngày 25 đến ngày 28 tháng 2",
+  "1月": "Tháng 1",
+  "2月": "Tháng 2",
+  "3月": "Tháng 3",
+  "4月": "Tháng 4",
+  "5月": "Tháng 5",
+  "6月": "Tháng 6",
+  "7月": "Tháng 7",
+  "8月": "Tháng 8",
+  "9月": "Tháng 9",
+  "10月": "Tháng 10",
+  "11月": "Tháng 11",
+  "12月": "Tháng 12",
   "人": "người",
   "件": {
-    "tested": "ca",
-    "reports": "ca"
+    "tested":"đã thử nghiệm",
+    "reports":"các báo cáo"
   },
   "公表日": "Ngày công bố",
-  "居住地": "Nơi cư trú",
-  "年代": "Tuổi",
+  "居住地": "Nơi ở",
+  "年代": "Độ tuổi",
   "性別": "Giới tính",
   "都内": "Tokyo",
   "埼玉県": "Saitama",
   "湖南省長沙市": "Thành phố Trường Sa, tỉnh Hồ Nam",
   "湖北省武漢市": "Thành phố Vũ Hán, tỉnh Hồ Bắc",
-  "{age}代": "Độ tuổi {age}",
-  "10歳未満": "Dưới 10 tuổi",
+  "市内": "Nội thành",
+  "{age}代": "Khoảng {age} tuổi",
+  "10歳未": "Chưa tới 10 tuổi",
   "男性": "Nam",
   "女性": "Nữ",
-  "退院※": "退院※",
-  "臨時休校中の新型コロナウイルス感染症対応についてのお願い": "Lưu ý về cách ứng phó với dịch bệnh do virus COVID-19 trong thời gian nghỉ học tạm thời",
-  "感染予防・健康管理": "Làm thế nào để giảm nguy cơ lây nhiễm",
-  "不特定多数の人の集まる場所等への外出を避け、基本的に自宅で過ごしてください。": "Tránh đến nơi đông người và ở yên tại nhà",
-  "手洗い、咳エチケット等により、感染予防に努めてください。": "Để ngăn ngừa sự lây lan của virus:\n- Rửa tay thường xuyên. \n- Che miệng khi ho hoặc hắt hơi.",
-  "【参考】感染症予防のための正しい手洗い方法（動画）": "【Tham khảo】(Phim hướng dẫn) Cách rửa tay đúng",
-  "規則正しい生活を心がけ、日常の健康管理に十分気を付けてください。": "Chú ý giữ gìn sức khỏe và cách sinh hoạt hợp lý.",
-  "感染症を疑う場合の対応": "Cách xử lý khi nghi ngờ nhiễm bệnh",
+  "退院": "Đã ra viện",
+  "臨時休校中の新型コロナウイルス感染症対応についてのお願い ": "Yêu cầu về việc ứng phó với bệnh lây nhiễm COVID-19 trong thời gian nghỉ học tạm thời",
+  "感染予防・健康管理": "Phòng tránh lây nhiễm/ Quản lý sức khỏe",
+  "不特定多数の人の集まる場所等への外出を避け、基本的に自宅で過ごしてください。": "Tránh đi ra ngoài đến nơi tụ tập đông người, về cơ bản là vui lòng hãy ở nhà.",
+  "手洗い、咳エチケット等により、感染予防に努めてください。": "Tích cực phòng tránh lây nhiễm bằng hình thức rửa tay, phép lịch sự khi ho, v...v...",
+  "【参考】感染症予防のための正しい手洗い方法（動画）": "【Tham khảo】Phương pháp rửa tay đúng để phòng tránh lây nhiễm ( xem video)",
+  "規則正しい生活を心がけ、日常の健康管理に十分気を付けてください。": "Lưu tâm đến việc sinh hoạt điều độ, và hãy chú ý cẩn thận trong việc quản lý sức khỏe hàng ngày.",
+  "感染症を疑う場合の対応": "Ứng phó trong trường hợp nghi vấn bị lây nhiễm",
   "各保健所にご相談ください": "Nếu bạn có bất kỳ triệu chứng nào được liệt kê dưới đây, xin vui lòng gọi cho trung tâm y tế công cộng gần đó.\n- Có triệu chứng cảm lạnh hoặc cúm\n- Bị sốt trên 37,5℃ trong bốn ngày trở lên\n- Cực kỳ mệt mỏi\n- Khó thở",
-  "「新型コロナウイルス感染症にかかる相談窓口について」": "Xem trang web: về Trung tâm tư vấn qua điện thoại COVID-19 (Cục Y tế và Phúc lợi thành phố Tokyo)",
-  "その他": "Thông tin khác",
+  "風邪の症状や、37.5度以上の発熱が4日以上続いている、強いだるさ（倦怠感）、息苦しさ（呼吸困難）がある場合は、各保健所にご相談ください": "Trường hợp thấy vó dấu hiệu bị cảm, phát sốt trên 37.5 độ C liên tục trên 4 ngày, cảm giác mệt mỏi nặng (cảm giác suy nhược), khó thở (khó khăn trong việc hô hấp) thì hãy liên hệ với các trung tâm bảo vệ sức khỏe.",
+  "浜松市帰国者・接触者 電話相談センターの電話番号について": "Về SĐT của trung tâm tư vấn điện thoại dành cho người về nước/người tiếp xúc Thành phố Hamamatsu",
+  "「新型コロナウイルス感染症にかかる相談窓口について」": "「Giới thiệu về nơi tư vấn bệnh lây nhiễm COVID-19」",
+  "その他": "Ngoài ra",
   "詳細は、各学校からのお知らせ等をご確認ください。": "Đảm bảo kiểm tra mọi thông tin cập nhật từ trường học",
   "企業の皆様・はたらく皆様へ": "Đối với doanh nghiệp và người đi làm",
   "新型コロナウイルス感染症に対応した制度融資": "Chính sách cấp vốn hỗ trợ đối ứng bệnh dịch Covid-19",
@@ -170,8 +192,8 @@
   "（注）同一の対象者について複数の検体を調査する場合あり": "(Ghi chú) Có trường hợp cùng với 1 bệnh nhân, có thể có nhiều điều tra về kết quả khám ",
   "検査実施数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "Số ca xét nghiệm đã thực hiện chỉ là số liệu sơ bộ, sẽ được chỉnh sửa thành dữ liệu xác thực vào hôm sau.",
   "合計": "Tổng cộng",
-  "{date}の全体累計": "Tổng cộng tính đến {date}",
-  "{date}の合計": "Tổng cộng tính đến {date}",
+  "{date}の全体累計": "Tổng cộng tính đến %{date}",
+  "{date}の合計": "Tổng cộng tính đến %{date}",
   "最新のお知らせ": "Tin tức mới cập nhật",
   "都の備蓄マスク20万枚を都内全区市町村へ提供": "Chính quyền thành phố Tokyo cung cấp kho dự trữ 200.000 chiếc khẩu trang cho tất cả các phường và thành phố ở Tokyo ",
   "都内医療機関及び保健所等へのマスクの配布について": "Về phân phối khẩu trang cho các cơ sở y tế và trung tâm y tế công cộng ở Tokyo",
@@ -250,7 +272,7 @@
   "※最新の情報はWebページをご覧ください": "※Hãy cập nhật thông tin mới nhất trên trang Web.",
   "〇": "〇",
   "ogp": {
-    "og:image": "https://stopcovid19.metro.tokyo.lg.jp/ogp.png"
+    "og:image": "https://stopcovid19.code4hamamatsu.org/hamamatsu/ogp.png"
   },
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/us/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=vi",
@@ -302,14 +324,35 @@
   "新型コロナウイルスに関する休暇や休業の取り扱い、職場のハラスメント、内定取り消しなどについての相談": "新型コロナウイルスに関する休暇や休業の取り扱い、職場のハラスメント、内定取り消しなどについての相談",
   "検査実施状況": "Số ca thực hiện kiểm tra",
   "都内発生": "都内発生",
-  "（チャーター機・クルーズ船等）": "（チャーター機・クルーズ船等）",
+  "（チャーター機・クルーズ船等）": "Chuyến bay trọn gói/ Tàu du lịch",
   "（注）検査実施人数には、チャーター機帰国者、クルーズ船乗客等は含まれていない": "（注）検査実施人数には、チャーター機帰国者、クルーズ船乗客等は含まれていない",
   "{title}のグラフをシェア": "Chia sẻ biểu đồ {title}",
-  "閉じる": "Close",
-  "クリップボードにコピー": "Sao chép vào Clipboard",
-  "LINEで{title}のグラフをシェア": "Chia sẻ biểu đồ {title} qua LINE",
-  "Twitterで{title}のグラフをシェア": "Chia sẻ biểu đồ {title} qua Twitter",
-  "facebookで{title}のグラフをシェア": "Chia sẻ biểu đồ {title} qua Facebook",
+  "閉じる": "Đóng",
+  "クリップボードにコピー": "Sao chép vào clipboard ",
+  "LINEで{title}のグラフをシェア": "Chia sẻ biểu đồ {title}ở LINE",
+  "Twitterで{title}のグラフをシェア": "Chia sẻ biểu đồ {title} ở Twitter",
+  "facebookで{title}のグラフをシェア": "Chia sẻ biểu đồ {title} ở facebook",
   "日付": "Ngày",
-  "不明": "Không rõ"
+  "不明": "Không xác định",
+  "平日・土日祝": "Ngày thường/ Thứ 7, chủ nhật, ngày lễ",
+  "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "Trước khi điện thoại hãy xem qua trang 「Bệnh lây nhiễm COVID-19」, và vui lòng xem xét về cách ứng phó cần thiết.",
+  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、市内IT技術者有志と浜松市が開設したものです。": "Trang web này được lập bởi các kỹ sư IT cùng chí hướng ở trong thành phố và thành phố Hamamatsu, nhằm mục đích cung cấp những thông tin mới nhất về bệnh lây nhiễm COVID-19.",
+  "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "Thành phố Hamamatsu dùng cách truyền tải dễ hiểu các thông tin chính thức và số liệu khách quan nhằm mục đích giúp cho những người dân sống trong thành phố Hamamatsu, những doanh nghiệp đặt trụ sở tại thành phố Hamamatsu, những người đến thăm thành phố Hamamatsu có thể nắm được hiện trạng và có những ứng phó phù hợp.",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "Chúng tôi cố gắng hết sức để đưa thông tin chính xác lên trang web này, tuy nhiên thành phố Hamamatsu sẽ không chịu trách nhiệm về bất kỳ hành động nào được thực hiện bởi người dùng sử dụng thông tin trên trang web này.",
+  "浜松市オープンデータカタログサイト": "Trang web catalog dữ liệu mở thành phố Hamamatsu",
+  "浜松市企画調整部広聴広報課": "Phòng truyền thông quảng cáo, ban điều chỉnh kế hoạch thành phố Hamamatsu",
+  "浜松市": "Thành phố Hamamatsu",
+  "浜松市新型コロナウイルス感染症対策本部報": "Báo cáo của trụ sở chính về việc ứng phó với bệnh lây nhiễm COVID-19 thành phố Hamamatsu",
+  "浜松市主催等 中止又は延期するイベント等": "Các sự kiện do thành phố Hamamatsu đăng cai phải dừng, hoặc lùi lại.",
+  "浜松市公式ホームページ": "Trang web chính thức của thành phố Hamamatsu",
+  "浜松市健康安全研究センター等": "Trung tâm nghiên cứu an toàn sức khỏe thành phố Hamamatsu...",
+  "市内の最新感染動向": "u hướng nhiễm bệnh mới nhất của thành phố Hamamatsu",
+  "市内発生（※1）": "Phát sinh trong thành phố（※1）",
+  "市内": "Nội thành",
+  "新型コロナウイルス感染症に関する相談件数": "Số vụ trao đổi về bệnh lây nhiễm COVID-19",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "Chúng tôi cố gắng hết sức để đưa thông tin chính xác lên trang web này, tuy nhiên thành phố Hamamatsu sẽ không chịu trách nhiệm về bất kỳ hành động nào được thực hiện bởi người dùng sử dụng thông tin trên trang web này.",
+  "また、利用者が当サイトを利用したことにより発生した利用者の損害及び利用者が第三者に与えた損害に対して、責任を負うものではありません。": "Và, chúng tôi cũng không chịu trách nhiệm đối với những tổn thất của người dùng hay do người dùng gây ra cho người thứ 3  phát sinh do việc người dùng sử dụng trang web này.",
+  "当サイトに掲載されている情報は、予告なしに変更又は削除することがあります。": "Những thông tin đã được đăng trên trang web này có thể thay đổi hoặc xóa bỏ mà không thông báo trước.",
+  "本サイトで公表しているデータは、{catalogWebsite}より誰でも自由にダウンロードが可能です。（データは順次追加予定です)": "Những dữ liệu được công bố ở trang web này thì ai cũng có thể tự do tải xuống được bằng {catalogWebsite}. (Dữ liệu sẽ được thêm dần theo trình tự)",
+  "静岡県オープンデータカタログサイト": "Trang web catalog dữ liệu mở Tỉnh Shizuoka"
 }
