day.jsの言語ファイルの読み込みを追加

--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -4,7 +4,7 @@
   "詳しくはこちらをご参照ください。 ": "Para más detalles, por favor consultar aquí",
   "詳細を見る（東京都福祉保健局）": "Ver detalles (Oficina de Salud y Bienestar del Gobierno Metropolitano de Tokio)",
   "都内の最新感染動向": "Últimas tendencias de infección en Tokio",
-  "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ ": "Si tiene alguna duda o preocupación sobre sus síntomas o los de su familia, llamar primero al teléfono de consultas",
+  "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Si tiene alguna duda o preocupación sobre sus síntomas o los de su familia, llamar primero al teléfono de consultas",
   "相談の手順を見る": "Ver el procedimiento de consulta",
   "検査陽性者の状況": "Situación de las personas de pruebas positivas",
   "陽性患者数": "Número de pacientes positivos",
@@ -50,9 +50,10 @@
   "湖南省長沙市": "Changsha, Hunan",
   "湖北省武漢市": "Wuhan, Hubei",
   "{age}代": "Generación {age}",
-  "10歳未": "10 años",
+  "10歳未満": "Menores de 10",
   "男性": "Hombre",
   "女性": "Mujer",
+  "退院※": "Descarga※",
   "臨時休校中の新型コロナウイルス感染症対応についてのお願い": "Pedido acerca de la nueva infección por coronavirus, durante la suspensión temporal de la escuela",
   "感染予防・健康管理": "Prevención de infecciones y cuidado de la salud",
   "不特定多数の人の集まる場所等への外出を避け、基本的に自宅で過ごしてください。": "Evitar salir a lugares donde se reúnen un número indeterminado de personas, básicamente quedarse en casa.",
@@ -302,10 +303,10 @@
   "都営交通に関すること": "都営交通に関すること",
   "交通局": "交通局",
   "（都営交通お客様センター）": "（都営交通お客様センター）",
-  "検査実施人数": "検査実施人数",
-  "（注）医療機関が保険適用で行った検査は含まれていない": "（注）医療機関が保険適用で行った検査は含まれていない",
-  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない",
-  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "（注）速報値として公開するものであり、後日確定データとして修正される場合あり",
+  "検査実施人数": "Numero de inspecciones",
+  "（注）医療機関が保険適用で行った検査は含まれていない": "(Nota)No incluye inspecciones realizadas por instituciones médicas bajo cobertura de seguro",
+  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "(Nota)Los retornados de aviones charter, pasajeros de cruceros, etc. no están incluidos",
+  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "(Nota) Se revela como un valor preliminar y puede revisarse como datos finalizados en una fecha posterior.",
   "都外": "都外",
   "新宿区エリアの来訪者推移（参考値）": "新宿区エリアの来訪者推移（参考値）",
   "千代田区エリアの来訪者推移（参考値）": "千代田区エリアの来訪者推移（参考値）",
